--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pysam
 pywfa
 kmerhash
 scikit-learn
+ncls
 
 # conda install -c bioconda -c conda-forge abpoa bwa samtools minimap2 tantan
 # pip install dodi
